use common empty list